@@ -14,10 +14,10 @@
 </head>
 <body>
   
-  <h1>SNMP Trap Translator v1.2beta</h1>
+  <h1>SNMP Trap Translator v1.2beta1</h1>
   
 <b>(<a href="http://www.snmptt.org">SNMPTT</a>)</b><br />
-This file was last updated on:&nbsp;June 18th, 2006
+This file was last updated on:&nbsp;November 18th, 2006
 <p><a href="#License">License</a></p>
 <p><a href="#What-is-it">SNMPTT</a></p>
 <blockquote><a href="#What-is-it">What is it?</a><br />
@@ -238,7 +238,7 @@ variable names translated into symbolic form, want to be able to have
 Although not required, using the Perl module is recommended.</blockquote>
 <h2><a id="Whats-New" name="Whats-New"></a>What's New</h2>
 
-<h3><b>v1.2beta</b> <b>- ?? ??, 2006</b></h3>
+<h3><b>v1.2beta1</b> <b>- November 18th, 2006</b></h3>
 <ul>
   <li>Added <b>snmptt.ini</b> options <b>date_format</b>, <b>time_format</b>, <b>date_time_format</b>, <b>date_time_format_sql</b> and <b>stat_time_format_sql</b> to allow the output format for <b>$x</b> and <b>$X</b> substitution variables, and the format of the date/time for text logs and SQL to be changed using <b>strftime()</b> variables.  This allows for proper date/time data types to be used in SQL databases.</li>
   <li>Add threads (Perl ithreads) support for EXEC.  When enabled, EXEC commands will launch in a thread to allow SNMPTT to continue processing other traps.  Added <b>snmptt.ini</b> options <b>threads_enable</b> and <b>threads_max</b>.</li>
@@ -683,8 +683,8 @@ load</li>
 </ul>
 <h2><a id="Upgrading" name="Upgrading"></a>Upgrading</h2>
 
-<h3><b>v1.1 to v1.2beta</b></h3>
-<p>To upgrade from v1.1 to v1.2beta, you should:</p>
+<h3><b>v1.1 to v1.2beta1</b></h3>
+<p>To upgrade from v1.1 to v1.2beta1, you should:</p>
 <ol>
   <li>Replace <b>snmptt</b>,  <b>snmptthandler</b>, <b>snmpttconvertmib</b> and <b>snmpttconvert</b>
   with the new versions contained in the v1.2beta package.&nbsp; Make sure the files are executable
