@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTT v1.2beta
+# SNMPTT v1.2beta1
 #
 # Copyright 2002-2006 Alex Burger
 # alex_b@users.sourceforge.net
@@ -47,7 +47,7 @@
 #
 use strict;
 
-my $snmptt_version = "v1.2beta";
+my $snmptt_version = "v1.2beta1";
 
 sub showversion
 {
